[gd_scene load_steps=7 format=3 uid="uid://cqepor71t6ham"]

[ext_resource type="Script" uid="uid://d4joakp74nxnn" path="res://Objects/Gameplay/HandFunctions/hand_grab.gd" id="1_04g53"]
[ext_resource type="Script" uid="uid://crriwmbbubu6s" path="res://Objects/Gameplay/HandFunctions/grabpack_item.gd" id="1_5wepg"]
[ext_resource type="PackedScene" uid="uid://b6d8fh6o30302" path="res://Objects/Gameplay/interaction_indicator.tscn" id="2_5wepg"]
[ext_resource type="Script" uid="uid://cp2nj828ny1um" path="res://Objects/Gameplay/HandFunctions/interaction.gd" id="3_jjnn1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5wepg"]
size = Vector3(0.6, 0.3, 0.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_fdawg"]
size = Vector3(0.6, 0.3, 0.4)

[node name="GrabpackItem" type="Node3D"]
script = ExtResource("1_5wepg")

[node name="HandGrab" type="Area3D" parent="." node_paths=PackedStringArray("grab_marker")]
script = ExtResource("1_04g53")
grab_animation = "sphere"
grab_marker = NodePath("HandPositionMarker")
metadata/_custom_type_script = "uid://d4joakp74nxnn"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HandGrab"]
transform = Transform3D(1, 0, -1.49012e-08, 7.45058e-09, 1, 0, -5.96046e-08, 0, 1, -0.0197576, 0.175, -2.80142e-06)
shape = SubResource("BoxShape3D_5wepg")

[node name="HandPositionMarker" type="Marker3D" parent="HandGrab"]
transform = Transform3D(1, 0, -1.49012e-08, -1.43935e-08, 0.258819, 0.965926, -3.85671e-09, -0.965926, 0.258819, 0, 0.290812, 0.123333)

[node name="BasicInteraction" type="Area3D" parent="."]
script = ExtResource("3_jjnn1")
metadata/_custom_type_script = "uid://cp2nj828ny1um"

[node name="CollisionShape3D" type="CollisionShape3D" parent="BasicInteraction"]
transform = Transform3D(1, 0, -1.49012e-08, 7.45058e-09, 1, 0, -5.96046e-08, 0, 1, -0.0197576, 0.15, -2.80142e-06)
shape = SubResource("BoxShape3D_fdawg")

[node name="InteractionIndicator" parent="BasicInteraction" instance=ExtResource("2_5wepg")]
transform = Transform3D(1, 0, -1.49012e-08, 7.45058e-09, 1, 0, -5.96046e-08, 0, 1, 0.00682002, 0.142609, 0.0254529)

[connection signal="let_go" from="HandGrab" to="." method="_on_hand_grab_let_go"]
[connection signal="player_interacted" from="BasicInteraction" to="." method="_on_basic_interaction_player_interacted"]
